--- a/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
@@ -32,7 +32,8 @@
                                     #{bundle.With}
                                     <p:calendar value="#{docReportBean.dateStart}" id="dateStart" 
                                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                                mask="99.99.9999"
+                                                locale="#{sessionBean.locale}"
                                                 required="#{param['isRequired'] == 'true'}"
                                                 requiredMessage="#{bundle.Field} [#{bundle.DateBegin}: #{bundle.With}] #{bundle.MustBeFilled}">
                                         <p:ajax event="dateSelect" listener="#{docReportBean.dateStartChange()}"/>
@@ -42,7 +43,8 @@
                                     #{bundle.At}
                                     <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" 
                                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                                mask="99.99.9999" 
+                                                locale="#{sessionBean.locale}"
                                                 required="#{param['isRequired'] == 'true'}"
                                                 requiredMessage="#{bundle.Field} [#{bundle.DateEnd}: #{bundle.At}] #{bundle.MustBeFilled}">
                                         <p:ajax event="dateSelect" listener="#{docReportBean.dateEndChange()}"/>
