--- a/escom-bpm-web/src/main/webapp/view/services/mail-box.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail-box.xhtml
@@ -75,7 +75,7 @@
                         </p:column> 
                         <p:column headerText="#{bundle.DateCreate}" sortBy="#{item.dateCreate}"> 
                             <h:outputLabel value="#{item.dateCreate}">
-                                <f:convertDateTime pattern="dd.MM.yyyy HH:mm" locale="RU" timeZone="#{TimeZone.getDefault()}"/>
+                                <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
                             </h:outputLabel>
                         </p:column>
                         <p:column headerText="#{bundle.Commands}" style="text-align: center;" > 
