--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -101,7 +101,8 @@
                     #{bundle.With}
                     <p:calendar value="#{explorerBean.model.dateCreateStart}" id="dateCreateStart" 
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                mask="99.99.9999" 
+                                locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateCreateSearche}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.With}] #{bundle.MustBeFilled}"
                                 disabled="#{!explorerBean.model.dateCreateSearche}">
@@ -113,7 +114,8 @@
                     #{bundle.At}
                     <p:calendar value="#{explorerBean.model.dateCreateEnd}" id="dateCreateEnd" 
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                mask="99.99.9999" 
+                                locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateCreateSearche}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.At}] #{bundle.MustBeFilled}"
                                 disabled="#{!explorerBean.model.dateCreateSearche}">
@@ -131,7 +133,8 @@
                     #{bundle.With}
                     <p:calendar value="#{explorerBean.model.dateChangeStart}" id="dateChangeStart" 
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                mask="99.99.9999"
+                                locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateChangeSearche}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.With}] #{bundle.MustBeFilled}"
                                 disabled="#{!explorerBean.model.dateChangeSearche}">
@@ -142,7 +145,8 @@
                     #{bundle.At}
                     <p:calendar value="#{explorerBean.model.dateChangeEnd}" id="dateChangeEnd"
                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
-                                pattern="dd.MM.yyyy" mask="99.99.9999" 
+                                mask="99.99.9999"
+                                locale="#{sessionBean.locale}"
                                 required="#{explorerBean.model.dateChangeSearche}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.At}] #{bundle.MustBeFilled}"
                                 disabled="#{!explorerBean.model.dateChangeSearche}">
