--- a/escom-bpm-web/src/main/webapp/view/admin/objects-expl.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/objects-expl.xhtml
@@ -3,7 +3,8 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions"
-                template="/view/templ/templ.xhtml">
+                template="/view/templ/templ.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
         
     <ui:param name="_explorerHeader" value="#{bundle.Rights}"/>        
 
@@ -41,7 +42,7 @@
             </pe:layoutPane>
 
             <pe:layoutPane id="luFrmDocs" position="center" resizable="true">                 
-                <h:form id="frmFldDefRight" style="font-size: 90%;"> 
+                <h:form id="frmFldDefRight" style="font-size: 90%;">
                     <p:tabView id="mainTab" orientation="left">
                         <p:tab title="#{bundle.Rights}" > 
                             <ui:include src="/view/admin/rights/objectsRight.xhtml"/>
