--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
@@ -57,7 +57,7 @@
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"/>                                                
 
                         <p:fileUpload id="file" disabled="#{addAttacheBean.doc == null}"
-                                      allowTypes="/(\.|\/)(pdf|docx|doc|rtf|txt|odt|zip|rar|png|tiff|gif|jpe?g)$/"
+                                      allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
                                       sizeLimit="#{docsBean.maxFileSize}"
                                       invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                                       invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
