--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -28,10 +28,10 @@
             <p:menuitem icon="ui-icon-clipboard" value="#{bundle.AddVersionFromScan}"     
                         oncomplete="document.getElementById('#{_frm}:mainTabView:btnScan').click();"/>                             
             <p:separator/>
-            <p:menuitem icon="ui-icon-arrowthickstop-1-s" value="#{bundle.Download}" title="#{bundle.DownloadCurrentVersion}"
+            <p:menuitem icon="ui-icon-arrowthickstop-1-s" value="#{bundle.DownloadCurrentVersion}"
                         disabled="#{_bean.editedItem.attache == null}" ajax="false"
                         action="#{_bean.downloadCurrentVersion()}"/>
-            <p:separator/> 
+            <p:separator rendered="#{_bean.editedItem.id != null}"/> 
             <p:menuitem icon="ui-icon-link" value="#{bundle.SendToEmailAsLinkPDF}"
                         rendered="#{_bean.editedItem.id != null}"
                         actionListener="#{docCardBean.prepareSendMailDoc('asLinkPDF')}"/>
@@ -121,7 +121,6 @@
                                 onselect="return itemChange = 1;"
                                 required="#{param['isRequired'] == 'true'}" 
                                 showButtonPanel="true" locale="#{sessionBean.locale}"                                
-                                mask="99.99.9999"
                                 navigator="true" yearRange="c-120:c+20"                                
                                 requiredMessage="#{bundle.Field} [#{bundle.DateDoc}] #{bundle.MustBeFilled}">
                     </p:calendar>              
